# XSum-Maynez-2020-ACL

./: .gitignore  README.md  pyproject.toml  requirements.txt  test.py
tests/: test_rothe_2020.py  xsum_dataset.py
