[tool.poetry]
name = "xsum-maynez-2020-reproduction"
version = "1.0"
description = ""
authors = ["Kensuke-Mitsuzawa <kensuke.mit@gmail.com>"]
readme = "README.md"
packages = [
     {include = "xsum_maynez_2020_reproduction"}
]


[tool.poetry.dependencies]
python = "^3.9"

transformers = "4.22.0"
datasets = "^3.6.0"
logzero = "^1.7.0"
tinydb = "^4.8.2"
more-itertools = "^10.7.0"
torch = "1.7.1"
numpy = "1.20.0"
sentencepiece = "0.2.0"


[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
pytest-resource-path = "^1.3.0"
python-dotenv = "*"
pytest-parallel = "*"
sphinx = "*"
myst-parser = "*"
sphinx_rtd_theme = "*"
papermill = "*"


[tool.poetry.scripts]

[tool.poetry.extras]

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
notebook = "^7.4.4"

[build-system]
requires = ["setuptools", "poetry", "poetry_core>=1.0", "cython"]
build-backend = "poetry.core.masonry.api"